samples/_failures_safe/1761308965_5f1a4c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cedd7889.c: In function ‘main’:
./samples/SAFE/__tmp_cedd7889.c:157:5: error: expected expression at end of input
  157 |     if (a < 0 || b <
      |     ^~
./samples/SAFE/__tmp_cedd7889.c:157:5: error: expected declaration or statement at end of input
